--- a/task1.html
+++ b/task1.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <div class="firstrow" >
-            <div style="background-color: #e37a7a;"></div>
-            <div style="background-color: #412020;"></div>
+        <div class="row" >
+            <div class="col col50" style="background-color: #e37a7a;"></div>
+            <div class="col col50" style="background-color: #412020;"></div>
         </div>
 
-        <div class="secondrow">
-            <div style="background-color: #bf28b5;"></div>
-            <div style="background-color: #534d6f;"></div>
-            <div style="background-color: #be1818;"></div>
+        <div class="row">
+            <div class="col col33" style="background-color: #bf28b5;"></div>
+            <div class="col col33" style="background-color: #534d6f;"></div>
+            <div class="col col33" style="background-color: #be1818;"></div>
         </div>
 
-        <div class="thirdrow">
-            <div style="background-color: #69130a; width: 800px;"></div>
-            <div style="background-color: #7ae395; width: 400px;"></div>
+        <div class="row">
+            <div class="col col66" style="background-color: #69130a;"></div>
+            <div class="col col33" style="background-color: #7ae395;"></div>
         </div>
 
-        <div class="firstrow">
+        <div class="row">
             <div style="background-color: #dda7a1;"></div>
             <div style="background-color: #ee5849;"></div>
         </div>
 
-        <div class="fourthrow">
+        <div class="row">
             <div style="background-color: #606060; width: 200px;"></div>
             <div style="background-color: #9a453d; width: 800px;"></div>
             <div style="background-color: #553d3d; width: 200px;"></div>
